--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body {
 }
 
 h1{
-  font-family: "Rubik Dirt", system-ui;
-  font-weight: 400;
-  font-size: 50px;
-  font-style: normal;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: 200;
+  font-size: 45px;
+  font-style: italic;
 }
 
